# centerline

./: .gitignore  CMakeLists.txt  README.md  result.txt
include/: internal.h
python/: result.txt  skeletons.txt  viz.py
src/: incident.cpp  main.cpp  parse.cpp  partition.cpp  simplify.cpp  straight_skeleton.cpp
